--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+		<!-- Meta Data -->
     <meta charset="utf-8">
     <meta name="description" content="My first webpage, with JavaScript">
     <meta name="keywords" content="immaculata, ics2o">
     <meta name="author" content="Van">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="./fav_index/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./fav_index/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./fav_index/favicon-16x16.png">
@@ -14,11 +16,14 @@
     <title>My first webpage, with a JS file</title>
   </head>
   <body>
+		<!-- Web page content and use JS function for rectangle -->
     <script src="./js/script.js"></script>
     <h1>Area & Perimeter of a Rectangle in JS</h1>
 		<p>The dimensions of a rectangle are 5cm by 3cm.</p>
     <div id="multiply-math">The Area is X</div>
 		<div id="add-math">The Perimeter is Y</div>
+		<br>
+		<!-- JS button -->
     <button onclick="doMathClicked()">Calculate</button>
   </body>
 </html>
